# madrid-cita-previa

./: .gitignore  Cargo.toml  README.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/src/commands/: fetch_closest_appointment_office.rs  fetch_procedure_appointments.rs  list_offices.rs  list_procedures.rs  mod.rs  office_info.rs
crates/data/: Cargo.toml  build.rs
crates/data/src/: lib.rs
crates/datagen/: Cargo.toml
crates/datagen/src/: main.rs
crates/lib/: Cargo.toml
crates/lib/src/: lib.rs  model.rs  session.rs
