[workspace]
members = ["crates/cli", "crates/lib", "crates/datagen", "crates/data"]

[workspace.dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
lazy_static = "1.5.0"
reqwest = { version = "0.12.23", default-features = false, features = ["cookies", "charset", "http2", "system-proxy", "rustls-tls", "rustls-tls-webpki-roots"] }
serde = "1.0.226"
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
scraper = "0.24"
regex = "1.11"
chrono = "0.4"
env_logger = "0.11"
log = "0.4"
