[package]
name = "madrid-cita-previa-data"
version = "0.1.0"
edition = "2024"

[dependencies]
madrid-cita-previa = { path = "../lib" }

[build-dependencies]
quote = "1.0.40"
madrid-cita-previa = { path = "../lib" }
serde = { workspace = true }
serde_json = {workspace = true }
lazy_static = { workspace = true }
regex = { workspace = true }
proc-macro2 = "1.0.101"
