[package]
name = "madrid-cita-previa"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
lazy_static = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
scraper = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
log = { workspace = true }
